--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,11 @@
             android:title="一首"
             />
         <item
+            android:id="@+id/search_poetry"
+            android:icon="@drawable/smssdk_search_icon"
+            android:title="搜索"
+            />
+        <item
             android:id="@+id/nav_my_collection"
             android:icon="@drawable/my_collection"
             android:title="我的收藏" />
