--- a/app/src/main/res/layout/poetry_list_item.xml
+++ b/app/src/main/res/layout/poetry_list_item.xml
@@ -16,21 +16,28 @@
 
         <TextView
             android:id="@+id/poetry_list_title"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="夜雨寄北"
-            android:textSize="23sp" />
+            android:textColor="@color/colorTitle"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/poetry_list_author"
-            android:layout_width="87dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="17dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:text="李商隐"
             android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/poetry_list_sentence"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="君问归期未有期，巴山夜雨涨秋池"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/poetry_list_id"
