--- a/app/src/main/res/layout/poetry_list_item.xml
+++ b/app/src/main/res/layout/poetry_list_item.xml
@@ -5,12 +5,12 @@
     >
 
     <LinearLayout
-        android:layout_width="383dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/list_card_selector"
         android:orientation="vertical">
 
@@ -19,9 +19,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginBottom="5dp"
             android:text="夜雨寄北"
             android:textColor="@color/colorTitle"
-            android:textSize="18sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/poetry_list_author"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="李商隐"
-            android:textSize="13sp" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/poetry_list_sentence"
@@ -37,7 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="君问归期未有期，巴山夜雨涨秋池"
-            android:textSize="15sp" />
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/poetry_list_id"
