--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="colorPrimary">#FFF8F2ED</item>
         <item name="colorPrimaryDark">#FFF8F2ED</item>
         <item name="colorAccent">#FFF8F2ED</item>
-        <item name="android:fontFamily" tools:targetApi="jelly_bean">@font/font2</item>
+        <item name="android:fontFamily" tools:targetApi="jelly_bean">@font/mini</item>
 
     </style>
 
