--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#CCF8F2E2</color>
     <color name="colorAccent">#CCF8F2E2</color>
     <color name="colorTitle">#CC1B1A1A</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
