--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="55dp"
     android:orientation="vertical"
-    android:background="@drawable/search_bg"
+    android:background="@mipmap/poem_bg2"
     >
     <ListView
         android:layout_marginTop="50dp"
