--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="55dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/poem_bg2"
     >
+    <!--android:background="@mipmap/poem_bg2"-->
+
+
     <ListView
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/poetry_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
