--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -61,7 +61,7 @@
             <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                 <TextView android:textSize="16.0sp" android:textColor="#ff969696" android:gravity="center_vertical"
                     android:id="@+id/poetry_search_text_pos" android:layout_width="0.0dip" android:layout_height="22.0dip" android:layout_marginTop="12.0dip"
-                    android:text="搜索诗词/诗人" android:layout_weight="1.0"/>
+                    android:text="搜索诗词/诗人/类型" android:layout_weight="1.0"/>
                 <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginTop="14.0dip"
                     android:src="@mipmap/poetry_ic_search" android:scaleType="centerInside" />
             </LinearLayout>
