--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -50,6 +50,7 @@
         <LinearLayout
             android:id="@+id/llBottomTabTab0"
             android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="vertical"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
@@ -60,43 +61,63 @@
                 android:layout_height="wrap_content"
                 android:layout_width="45dp"
                 android:gravity="center"
+                android:textColor="@drawable/tab_color_selector"
                 android:text="诗词名" />
             <View
+                android:id="@+id/vBottomTabTab0"
                 android:background="@drawable/tab_backgroud"
-                android:layout_width="45dp"
-                android:layout_height="3.0dip"
+                android:layout_width="35dp"
+                android:layout_height="2.0dip"
                 android:layout_marginTop="5.0dip" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llBottomTabTab1"
             android:gravity="center"
+            android:layout_gravity="center"
+            android:orientation="vertical"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:textColor="@drawable/tab_color_selector"
             android:layout_weight="1" >
 
             <TextView
                 android:id="@+id/tvBottomTabTab1"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="45dp"
+                android:textColor="@drawable/tab_color_selector"
                 android:text="按作者" />
+            <View
+                android:id="@+id/vBottomTabTab1"
+                android:background="@drawable/tab_backgroud"
+                android:layout_width="35dp"
+                android:layout_height="2.0dip"
+                android:layout_marginTop="5.0dip" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llBottomTabTab2"
             android:gravity="center"
+            android:layout_gravity="center"
+            android:orientation="vertical"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_weight="1" >
 
             <TextView
                 android:id="@+id/tvBottomTabTab2"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_width="45dp"
                 android:textColor="@drawable/tab_color_selector"
                 android:text="按类型" />
+            <View
+                android:id="@+id/vBottomTabTab2"
+                android:background="@drawable/tab_backgroud"
+                android:layout_width="35dp"
+                android:layout_height="2.0dip"
+                android:layout_marginTop="5.0dip" />
         </LinearLayout>
     </LinearLayout>
 
