--- a/app/src/main/res/drawable/tab_backgroud_selected.xml
+++ b/app/src/main/res/drawable/tab_backgroud_selected.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#48000000" />
+    <solid android:color="#e1e1e1" />
 </shape>
