--- a/app/src/main/res/layout/activity_poetry.xml
+++ b/app/src/main/res/layout/activity_poetry.xml
@@ -6,10 +6,15 @@
     android:orientation="vertical"
     android:background="@mipmap/poem_bg2">
 
-    <FrameLayout
+    <include
+        layout="@layout/fragment_poetry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!--<FrameLayout
         android:id="@+id/activity_poetry_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </FrameLayout>
+    </FrameLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
