--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -2,7 +2,8 @@
 <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="223.0dip"
   xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/ly_rili" android:background="@mipmap/poetry_calendar_bg2" android:layout_width="fill_parent" android:layout_height="223.0dip">
-        <LinearLayout android:orientation="vertical" android:layout_width="160.0dip" android:layout_height="174.0dip" android:layout_centerHorizontal="true">
+        <LinearLayout android:id="@+id/ll_calendar"
+            android:orientation="vertical" android:layout_width="160.0dip" android:layout_height="174.0dip" android:layout_centerHorizontal="true">
             <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
                 <LinearLayout android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                     <View android:background="#ff000000" android:layout_width="1.5dip" android:layout_height="fill_parent" />
