--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
 
 
     <style name="Base.Widget.Design.TabLayout" parent="android:Widget">
-        <item name="tabBackground">@drawable/tab_backgroud</item>
+        <item name="tabBackground">@drawable/tab_background</item>
         <item name="tabIndicatorColor">#ff00ff</item>
         <item name="tabIndicatorHeight">0dp</item>
     </style>
