--- a/app/src/main/res/layout/collection_list_item.xml
+++ b/app/src/main/res/layout/collection_list_item.xml
@@ -32,19 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="right"
-                android:text="收藏时间：2018.1.11" />
-
-            <TextView
-                android:id="@+id/tv_collect_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/tv_get_poetry_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:textSize="13sp"
+                android:text="收藏于：二零一九年十二月二十九日" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
