--- a/app/src/main/res/layout/fragment_poetry_remark.xml
+++ b/app/src/main/res/layout/fragment_poetry_remark.xml
@@ -7,8 +7,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="52dp">
+        android:layout_marginTop="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
