--- a/app/src/main/res/layout/fragment_record_list.xml
+++ b/app/src/main/res/layout/fragment_record_list.xml
@@ -14,8 +14,7 @@ android:layout_height="match_parent"
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="52dp">
+        android:layout_marginTop="15dp">
         <ListView
             android:id="@+id/record_list_view"
             android:layout_width="match_parent"
