--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -27,15 +27,16 @@
             android:layout_weight="3"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:textSize="22sp"
-            android:text="用户名"/>
+            android:textSize="18sp"
+            android:text="用户名 or 诗词名"/>
         <TextView
             android:id="@+id/tv_upload_time"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="2018-1-14"/>
+            android:textSize="13sp"
+            android:text="二零一九年十一月二十一日"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
