record list 加载后无法现实其它fragment

--- a/app/src/main/res/layout/activity_poetry.xml
+++ b/app/src/main/res/layout/activity_poetry.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@mipmap/poem_bg2"
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="45dp"
         android:layout_height="46dp"
         android:orientation="vertical">
