--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -20,6 +20,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:focusableInTouchMode="true"/>
+
             <android.support.v7.widget.SearchView
                 android:id="@+id/collection_search_view"
                 android:layout_width="match_parent"
@@ -28,7 +33,7 @@
                 android:gravity="center_vertical"
                 android:textColor="#ff555555"
                 android:textSize="16.0sp"
-                android:focusable="true"
+                android:focusableInTouchMode="true"
                 app:actionViewClass="android.support.v7.widget.SearchView"
                 app:iconifiedByDefault="false"
                 app:queryHint="收藏中搜索"
