--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="login_icon_height">135.0dip</dimen>
+    <dimen name="login_icon_margintop">46.0dip</dimen>
+    <dimen name="login_icon_weight">135.0dip</dimen>
+    <dimen name="login_relat_userAndpwd_margintop">69.0dip</dimen>
 </resources>
