--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -51,7 +51,7 @@
         android:id="@+id/collection_search_res_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/collect_bg"/>
+        android:background="@mipmap/bg_register"/>
 
 
 </LinearLayout>
