--- a/app/src/main/res/layout/collection_list_item.xml
+++ b/app/src/main/res/layout/collection_list_item.xml
@@ -6,10 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="0dp"
+        android:padding="15dp"
+        android:layout_margin="5dp"
         android:background="@drawable/list_card_selector">
         <LinearLayout
             android:layout_width="match_parent"
