--- a/app/src/main/res/layout/poetry_list_item.xml
+++ b/app/src/main/res/layout/poetry_list_item.xml
@@ -7,10 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:layout_margin="5dp"
         android:background="@drawable/list_card_selector"
         android:orientation="vertical">
 
