--- a/app/src/main/res/layout/record_list_item.xml
+++ b/app/src/main/res/layout/record_list_item.xml
@@ -60,8 +60,8 @@
 
                     <ImageView
                         android:id="@+id/play_upload_voice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:focusable="false"
                         android:src="@drawable/play" />
 
