--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -34,7 +34,7 @@
         android:layout_below="@id/ll_register_topbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/login_relat_userAndpwd_margintop"
-        android:src="@mipmap/signin_icon" />
+        android:src="@drawable/mypoetryicon" />
 
     <RelativeLayout
         android:id="@+id/relat_userAndpwd"
