--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -23,6 +23,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:focusedByDefault="true"
+                android:focusable="true"
                 android:focusableInTouchMode="true"/>
 
             <android.support.v7.widget.SearchView
