--- a/app/src/main/res/layout/fragment_record_list.xml
+++ b/app/src/main/res/layout/fragment_record_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+    android:alpha="0.8"
     android:background="@mipmap/poem_bg2"
     >
     <TextView
@@ -15,17 +16,13 @@ android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp">
+
         <ListView
             android:id="@+id/record_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         </ListView>
-        <TextView
-            android:id="@+id/no_data_hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text=""/>
+
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
