--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,11 +13,11 @@
             android:visible="false"
             android:title="注销"
             />
-        <item
-            android:id="@+id/nav_one_poetry"
-            android:icon="@drawable/home"
-            android:title="首页"
-            />
+        <!--<item-->
+            <!--android:id="@+id/nav_one_poetry"-->
+            <!--android:icon="@drawable/home"-->
+            <!--android:title="首页"-->
+            <!--/>-->
         <item
             android:id="@+id/nav_my_collection"
             android:icon="@drawable/my_collection"
