--- a/app/src/main/res/layout/user_comment_view.xml
+++ b/app/src/main/res/layout/user_comment_view.xml
@@ -15,7 +15,7 @@
             android:background="@color/white"
             android:paddingBottom="30dp"
             android:paddingTop="@dimen/item_padding_bottom"
-            android:text="说点什么吧..." />
+            android:hint="说点什么吧..." />
 
 
 
